--- a/RecordFontFace.css
+++ b/RecordFontFace.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Record-Font';
-    src        : url('assets/fonts/icomoon.eot?ouh4mz');
-    src        : url('assets/fonts/icomoon.eot?ouh4mz#iefix') format('embedded-opentype'),
-        url('assets/fonts/icomoon.ttf?ouh4mz') format('truetype'),
-        url('assets/fonts/icomoon.woff?ouh4mz') format('woff'),
-        url('assets/fonts/icomoon.svg?ouh4mz#icomoon') format('svg');
+    src        : url('./RecordFont.eot?ouh4mz');
+    src        : url('./RecordFont.eot?ouh4mz#iefix') format('embedded-opentype'),
+        url('./RecordFont.ttf?ouh4mz') format('truetype'),
+        url('./RecordFont.woff?ouh4mz') format('woff'),
+        url('./RecordFont.svg?ouh4mz#RecordFont') format('svg');
     font-weight : normal;
     font-style  : normal;
     font-display: block;
